[gd_scene load_steps=2 format=3 uid="uid://cibdxf7tbds1c"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_khswy"]

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_khswy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopUI" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScoresContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopUI"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Player1Score" type="Label" parent="MarginContainer/VBoxContainer/TopUI/ScoresContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.254902, 0.411765, 0.882353, 1)
text = "Player 1: 0"

[node name="Player2Score" type="Label" parent="MarginContainer/VBoxContainer/TopUI/ScoresContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.862745, 0.0784314, 0.235294, 1)
text = "Player 2: 0"

[node name="Player3Score" type="Label" parent="MarginContainer/VBoxContainer/TopUI/ScoresContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.392157, 0, 1)
text = "Player 3: 0"

[node name="Player4Score" type="Label" parent="MarginContainer/VBoxContainer/TopUI/ScoresContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.54902, 0, 1)
text = "Player 4: 0"

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer/TopUI"]
layout_mode = 2
text = "Click your button when you see a SET!"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CardGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4

[node name="ClaimButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Player1Claim" type="Button" parent="MarginContainer/VBoxContainer/ClaimButtons"]
custom_minimum_size = Vector2(180, 70)
layout_mode = 2
text = "PLAYER 1 CLAIMS!"

[node name="Player2Claim" type="Button" parent="MarginContainer/VBoxContainer/ClaimButtons"]
custom_minimum_size = Vector2(180, 70)
layout_mode = 2
text = "PLAYER 2 CLAIMS!"

[node name="Player3Claim" type="Button" parent="MarginContainer/VBoxContainer/ClaimButtons"]
custom_minimum_size = Vector2(180, 70)
layout_mode = 2
text = "PLAYER 3 CLAIMS!"

[node name="Player4Claim" type="Button" parent="MarginContainer/VBoxContainer/ClaimButtons"]
custom_minimum_size = Vector2(180, 70)
layout_mode = 2
text = "PLAYER 4 CLAIMS!"

[node name="SelectionUI" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="InstructionLabel" type="Label" parent="MarginContainer/VBoxContainer/SelectionUI"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Player X: Click 3 cards for your SET"
horizontal_alignment = 1

[node name="ButtonsRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SelectionUI"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/SelectionUI/ButtonsRow"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "✓ CONFIRM SET"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/SelectionUI/ButtonsRow"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "✗ CANCEL"

[node name="NewGameButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "New Game"
